# sp1-tee

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Makefile  README.md  allocator.template.yaml  app.ts  cdk.json  enclave.sh  install-deps.sh  install-host.sh  install-nitro-cli.sh  package.json  pnpm-lock.yaml  proxy.nginx.conf  stack.ts  tee-service.template.service
.github/workflows/: pr.yml  test.yml
common/: Cargo.toml
common/src/: communication.rs  lib.rs
contracts/: foundry.toml  remappings.txt
contracts/deployments/: 11155111.json  31337.json
contracts/script/: Deploy.s.sol
contracts/src/: SP1TeeVerifier.sol  SignersMap.sol  SimpleOwnable.sol  TwoStepOwner.sol
contracts/test/: Counter.t.sol  IterableMap.t.sol  Verifier.t.sol
enclave/: Cargo.toml  build.rs
enclave-sys/: Cargo.toml
enclave/src/: ffi.rs  main.rs  server.rs
enclave/src/ffi/: bytebuf.rs
host/: Cargo.toml  docker-compose.yml
host/examples/: fibonacci.rs
host/prometheus/: prometheus.yml
host/src/: api.rs  attestations.rs  client.rs  contract.rs  lib.rs  metrics.rs  server.rs  setup.rs
host/src/server/: auth.rs  mod.rs  stream.rs
scripts/: enclave.sh  install-guest.sh  install-host.sh  proxy.sh  user-data.sh
