[workspace]
name = "sp1-tee"
members = ["host", "enclave", "common"]

[workspace.package]
version = "0.0.1"
edition = "2021"

[workspace.dependencies]
# Workspace crates
sp1-tee-enclave = { path = "./enclave" }
sp1-tee-host = { path = "./host" }
sp1-tee-common = { path = "./common" }

# Shared dependencies
vsock = "0.5"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
thiserror = "1.0"
clap = { version = "4.5.30", features = ["derive"] }
k256 = { version = "0.13.4", features = ["serde"] }

# sp1
sp1-core-executor = { version = "4.1.0" } 
sp1-core-machine = { version = "4.1.0" } # Needed for `stdin` type.
sp1-prover = { version = "4.1.0" } # Needed for subproof verification.
