[workspace]
members = ["host", "enclave", "common"]
exclude = ["sp1-wip"]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"

[workspace.dependencies]
# Workspace crates
sp1-tee-enclave = { path = "./enclave" }
sp1-tee-host = { path = "./host" }
sp1-tee-common = { path = "./common" }

# Shared dependencies
tokio-vsock = "0.7"
tokio = { version = "1.4", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
thiserror = "1.0"
clap = { version = "4.5.30", features = ["derive"] }
k256 = { version = "0.13.4", features = ["serde"] }
aws-nitro-enclaves-nsm-api = "0.4.0"
tracing = "0.1.41"

# Alerts
alert-subscriber = { git = "https://github.com/succinctlabs/alert-subscriber.git", branch = "main" }

# TEMP: Use local sp1-wip repo for now.
# TODO: Change this to public when merged.
sp1-sdk = { path = "sp1-wip/crates/sdk" }