[workspace]
members = ["host", "enclave", "common"]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"

[workspace.dependencies]
# Workspace crates
sp1-tee-enclave = { path = "./enclave" }
sp1-tee-host = { path = "./host" }
sp1-tee-common = { path = "./common" }

# Shared dependencies
tokio-vsock = "0.7"
tokio = { version = "1.4", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
dotenv = "0.15.0"
thiserror = "1.0"
clap = { version = "4.5.30", features = ["derive", "env"] }
k256 = { version = "0.13.4", features = ["serde"] }
aws-nitro-enclaves-nsm-api = "0.4.0"
tracing = "0.1.41"
metrics = "0.24.2"
metrics-exporter-prometheus = "0.16.2"
metrics-process = "2.4.0"
strum = "0.27.1"

# Alerts
alert-subscriber = { git = "https://github.com/succinctlabs/alert-subscriber.git", branch = "main" }

sp1-sdk = { version = "5.0.0" }
sp1-prover = { version = "5.0.0" }
