[package]
name = "sp1-tee-enclave"
version.workspace = true
edition.workspace = true

[dependencies]
clap = { workspace = true }
parking_lot = "0.12.3"
rand_core = "0.6"

# Protocol deps.
k256 = { workspace = true }
sp1-tee-common = { workspace = true }

# executor
sp1-core-executor = { workspace = true }

# Transport deps.
vsock = { workspace = true }

[build-dependencies]
cmake = "0.1"
