[package]
name = "sp1-tee-enclave"
version.workspace = true
edition.workspace = true

[dependencies]
clap = { workspace = true }
parking_lot = "0.12.3"
rand_core = "0.6"

# Protocol deps.
k256 = { workspace = true }
sp1-tee-common = { workspace = true }

# executor
sp1-core-executor = { workspace = true }

# Transport deps.
tokio-vsock = { workspace = true }
tokio = { workspace = true }
libc = "0.2.170"

[build-dependencies]
cmake = "0.1"
