[package]
name = "sp1-tee-host"
version.workspace = true
edition.workspace = true

[[bin]]
name = "sp1-tee-server"
path = "bin/server.rs"

[[bin]]
name = "vsock_test"
path = "bin/vsock_test.rs"

[[bin]]
name = "sp1-tee-setup"
path = "bin/setup.rs"

[[bin]]
name = "save_attestation"
path = "bin/save_attestation.rs"

[[bin]]
name = "validate_attestations"
path = "bin/validate_attestations.rs"

[[example]]
name = "fibonacci"
path = "examples/fibonacci.rs"

[dependencies]
sp1-tee-common = { workspace = true }
tokio-vsock = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
k256 = { workspace = true }
alloy = { version = "0.11.1", features = ["full", "signer-ledger"] }

# Attestation Helpers
aws-nitro-enclaves-cose = { version = "0.5" }
aws-nitro-enclaves-nsm-api = { workspace = true }
serde_json = "1.0.139"
aws-config = "1.5.17"
aws-sdk-s3 = "1.77.0"
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# todo: Move this to crates io when upstream release is done.
attestation-doc-validation = { git = "https://github.com/nhtyy/attestation-doc-validation", branch = "main" }
hex = "0.4.3"
axum = "0.8.1"

sp1-sdk = { workspace = true }

[dev-dependencies]
reqwest = { version = "0.11.0", features = ["json", "rustls-tls"] }

[features]
production = []
