[package]
name = "sp1-tee-host"
version.workspace = true
edition.workspace = true

[[bin]]
name = "sp1-tee-server"
path = "bin/server.rs"
required-features = ["server"]

[[bin]]
name = "vsock_test"
path = "bin/vsock_test.rs"
required-features = ["server"]

[[bin]]
name = "sp1-tee-setup"
path = "bin/setup.rs"
required-features = ["server"]

[[bin]]
name = "save_attestation"
path = "bin/save_attestation.rs"
required-features = ["attestations"]

[[bin]]
name = "validate_signers"
path = "bin/validate_signers.rs"
required-features = ["attestations"]

[[example]]
name = "fibonacci"
path = "examples/fibonacci.rs"
required-features = ["client"]

[[bin]]
name = "redirect"
path = "bin/redirect.rs"

[dependencies]
sp1-tee-common = { workspace = true }
tokio-vsock = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }

clap = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
k256 = { workspace = true }

alloy = { version = "0.11.1", features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
alert-subscriber = { workspace = true }
hex = "0.4.3"
axum = { version = "0.8.1", optional = true }

# Attestation Helpers
aws-nitro-enclaves-cose = { version = "0.5", optional = true }
aws-nitro-enclaves-nsm-api = { workspace = true, optional = true }
aws-config = { version = "1.5.17", optional = true }
aws-sdk-s3 = { version = "1.77.0", optional = true }
attestation-doc-validation = { git = "https://github.com/nhtyy/attestation-doc-validation", branch = "main", optional = true }
futures = { version = "0.3.31", optional = true }

# SDK Helpers
sp1-sdk = { workspace = true }
tonic = { version = "0.12", features = ["tls", "tls-roots"], optional = true }
bincode.workspace = true
serde_json = "1.0.140"
lazy_static = "1.5.0"

[dev-dependencies]
tokio = { workspace = true }

[features]
default = ["server"]
# Use production constants.
production = []
server = ["attestations", "dep:axum", "dep:tokio-vsock", "dep:tokio", "dep:futures", "dep:tonic"]
attestations = [
    "dep:aws-config",
    "dep:aws-sdk-s3",
    "dep:aws-nitro-enclaves-cose",
    "dep:aws-nitro-enclaves-nsm-api",
    "dep:attestation-doc-validation",
]
client = []
